Stacks 2.1 - tba
-------------------------
    Feature: ustacks Changed --high_cov_thres default value from 2.0 to 3.0.
    Feature: gstacks: Changed --min-kmer-freq default value from 0.05 to 0.01.
    Feature: Added further checks on zlib calls.

Stacks 2.0 - Apr 23, 2018
-------------------------
    Feature: modified cstacks and ustacks gapped alignment algorithms to always align the two stacks/alleles
             with the most k-mers in common, removed the previous minimum k-mer limit.
    Feature: modified cstacks so that when a sample locus matches two or more catalog loci, those catalog
             loci are combined, or rolled-up, reducing undermerged loci that generate excess homozygote calls.
    Feature: modified tsv2bam so that when two loci from the same sample match the same catalog locus, those
             loci are combined.
    Bugfix: corrected BbvCI restriction enzyme to add the missing negative strand sequence.
    Bugfix: corrected the catalog writing routines for unzipped output files to include missing column.
    Bugfix: populations: Fixed the filtering of monomorphic loci.
    Bugfix: populations: Now preserving sample ordering in all outputs.
    Bugfix: Fixed ICPC compilation.

    2.0b - May 1, 2018
    Feature: gstacks: Removed the assertion that the first basepair of each locus should
             be part of a cutsite (now a warning).
    Feature: gstacks: The reported effective coverage is now a more realistic weighted mean.
    Bugfix: populations: Fixed STRUCTURE output being corrupted for some unordereds population maps.

Stacks 2.0 Beta 10 - Apr 10, 2018
---------------------------------
    Feature: Improved gapped alignment for secondary reads in ustacks.
    Feature: Improved populations performance.
    Feature: Added enzymes Cac8I, MslI.
    Feature: Made population maps more tolerant to spurious extra spaces and lines.